Bug 32558 - Handles for moving toolbars are in the wrong location when using the Qt vclplug
Summary: Handles for moving toolbars are in the wrong location when using the Qt vclplug
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.0 RC1
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-21 10:02 UTC by Bernhard Rosenkraenzer
Modified: 2011-01-18 06:00 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (74.39 KB, image/png)
2010-12-21 10:02 UTC, Bernhard Rosenkraenzer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Rosenkraenzer 2010-12-21 10:02:12 UTC
Created attachment 41349 [details]
Screenshot showing the problem

When using the Qt vclplug, the handle for moving a toolbar is displayed in the middle of the toolbar instead of on the left. (You still need to grab it on the left to move the toolbar around, so this is purely a display issue).
Comment 1 Jan Holesovsky 2010-12-21 12:25:57 UTC
Which theme, please?  Does it do when you switch the theme to another one?
Comment 2 Bernhard Rosenkraenzer 2010-12-21 12:43:01 UTC
Seems to be style related:

Happens with: Oxygen, MS Windows 9x

Doesn't happen with: Plastique, CDE, Motif

With Cleanlooks, everything is rather messed up and the toolbar handle isn't visible at all.
Comment 3 Luboš Luňák 2011-01-18 06:00:45 UTC
Fixed.