paint toolbar handle positioned properly (fdo#32558)

The problem was that we passed the whole widget geomtry to QStyle
but it expected only geometry of the handle and e.g. Oxygen used
center of the geometry.